<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    android:id="@+id/register_activity"
    >

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="298dp"
        android:layout_height="43dp"
...
